Version 1.87 (?? September 01)
- Remove deprecated code.
- Internal classes now templated either by Tds or Tr so they are more easily
  reusable.

Version 1.86 (31 August 01)
- Remove non default constructors in [ds_]vertex and [ds_]cell.
- Move find_conflict() and insert_conflict() from the TDS to Triangulation.
- Rewrite TDS::create_star to TDS::star_hole_[23].
- New TDS internal functions change_orientation(Cell *) and
  set_adjacency(Cell *a, Cell *b, int a, int b).

Version 1.84 (27 August 01)
- Use std::swap instead of temporary variables in swap().
- Commonize code between operator=() and copy_triangulation().
- Test iterators/circulators for Delaunay too.
- New cell and vertex container in DS_Container.h using an allocator.
- TDS uses DS_Container.
- Remove list pointer from ds_cell, to make it more compact.
- Circulators don't store a TDS* anymore as it's not used.
- ds_cell_iterator removed, replaced by DS_Container<Cell>::iterator.
- ds_vertex_iterator removed, replaced by DS_Container<Vertex>::iterator.
- other ds_iterators use the one above internally, also don't derive from
  Triangulation_utils_3.
- const correctness fixes.
- New function Triangulation_3<>::collinear_position() which is a cleaner
  replacement of all calls to compare_[xyz].

Version 1.83 (3 August 01)
- Susan added missing .gif and .eps files in the doc_tex/*_ref directories

Version 1.82 (1 August 01)
- Susan moved the doc_tex/*_ref directories up one level and changed htmlfiles
  accordingly

Version 1.81 (31 July 01)
- ds_cell doesn't derive from Triangulation_util_3 anymore, as this wasted
  memory for nothing with GCC 2.95.

Version 1.80 (27 July 01)
- Susan moved the TDS documentation to its own directory, eliminating one
  level of subdirectories
- also made changes necessary for manual split

Version 1.79 (25 July 01)
- Short names in the examples for VC++.

Version 1.78 (23 July 01)
- traits concepts doc modified according to the corresponding modifications
  in the code